yamls/kube-ingres.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ingress
  namespace: kube-system
spec:
  rules:
  - host: app.kubelink.borathon.photon-infra.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
